Add controller class for errors and fix observer classes