@@ -7,7 +7,6 @@ import com.example.weatherspringboot.dto.WeatherResponse;
 import com.example.weatherspringboot.entity.SavedWeatherDay;
 import com.example.weatherspringboot.repository.LocationRepository;
 import com.example.weatherspringboot.repository.SavedWeatherDayRepository;
-import com.example.weatherspringboot.service.Observer.WeatherStation;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.scheduling.annotation.Scheduled;
@@ -23,14 +22,12 @@ public class WeatherService {
 
  private final ApiClient apiClient;
  private final LocationRepository locationRepository;
- private final WeatherStation weatherStation;
  private final SavedWeatherDayRepository savedWeatherDayRepository;
 
 
  public WeatherResponse getWeatherResponseByCity(String city) {
   LocationData dataGeoResponse = apiClient.getGeoResponse(city);
-  WeatherResponse dataWeatherResponse = apiClient.getWeatherResponse(dataGeoResponse.getLatitude(), dataGeoResponse.getLongitude());
-  return dataWeatherResponse;
+     return apiClient.getWeatherResponse(dataGeoResponse.getLatitude(), dataGeoResponse.getLongitude());
 
  }
 
@@ -45,18 +42,18 @@ public class WeatherService {
    if (daily.getTime() == null || daily.getTime().isEmpty()) {
     return;
    }
-   LocalDate date = LocalDate.parse(daily.getTime().get(0));
+   LocalDate date = LocalDate.parse(daily.getTime().getFirst());
    if(savedWeatherDayRepository.existsSavedWeatherDayBy(location, date)){
     return;
    }
    SavedWeatherDay entity = new SavedWeatherDay();
-   entity.setWeatherCodes(daily.getWeatherCodes().get(0));
-   entity.setTempMax(daily.getTempMax().get(0));
-   entity.setTempMin(daily.getTempMin().get(0));
-   entity.setSunrise(daily.getSunrise().get(0));
-   entity.setSunset(daily.getSunset().get(0));
-   entity.setUvMax(daily.getUvMax().get(0));
-   entity.setRainSum(daily.getRainSum().get(0));
+   entity.setWeatherCodes(daily.getWeatherCodes().getFirst());
+   entity.setTempMax(daily.getTempMax().getFirst());
+   entity.setTempMin(daily.getTempMin().getFirst());
+   entity.setSunrise(daily.getSunrise().getFirst());
+   entity.setSunset(daily.getSunset().getFirst());
+   entity.setUvMax(daily.getUvMax().getFirst());
+   entity.setRainSum(daily.getRainSum().getFirst());
    savedWeatherDayRepository.save(entity);
 
   });
